# homelab

./: .gitignore  X.py  biome.json  bun-infra.config.ts  bun-infra.state.json  bun.lockb  compile-tool.sh  config.bu  config.ign  eslint.config.js  init.bash  init.sh  knip.ts  link.bash  package.json  pyproject.toml  run.fish  run.py  run.sh  run.ts  secrets.env  secrets.yaml  sesame.state.json  sesame.ts  ssh.yaml  test.py  tsconfig.json
archive/: certs.ts  macbook.md  saved.md
common/: .bash_aliases  _modules.py  add_ssh_key.sh  age.fish  age.py  alias_l.sh  authorized_keys  caddy.sh  caddy_service.sh  common.fish  common.py  common.sh  debian_sid.sh  docker.fish  docker.py  docker.sh  fish_config.fish  fish_install.py  fish_install.sh  fish_setup.fish  fish_setup.py  functions.sh  git_aliases.sh  node.fish  node.py  pdm.py  shared.py  sops.fish  sops.py  sops.sh  ssh.fish  ssh.py  ssh.sh  ssh_perms.sh  sshd.py  sshd.sh  sshd_config  tailscale.sh
common/configs/: authorized_keys
configs/: .gitconfig  .sgptrc  config.fish  ghostty  key.age  secrets.yaml  ssh.yaml  sshd_config
data/: brew-casks.ts  brew-formula.ts  fisher.ts  links.ts  mac-apps.ts
go-tools/cleanup/: .golangci.yaml  cleanup.go  go.mod  go.sum  justfile  main.go  utils.go
go-tools/dns-overrides/: .golangci.yaml  go.mod  go.sum  justfile  main.go  unbound-client.go  utils.go
go-tools/docker-container-update/: .golangci.yaml  go.mod  go.sum  justfile  main.go
go-tools/homelab-api/: go.mod  justfile  main.go
go-tools/to65/: go.mod  go.sum  justfile  main.go
homelab-api/: go.sum  main.go
hosts/macbook/: .gitconfig  .gitconfig-swf  .prettierrc.mjs  .wezterm.lua  allowed_signers  (+3 more)
incus/: actual-budget.md  adamhl-dev.md  backrest.md  battlegrind.md  byparr.md  caddy.md  discord-app-bot.md  filebrowser.md  flaresolverr.md  home-assistant.md  homepage.md  immich.md  incus.md  infisical.md  jellyfin.md  joieparma-com.md  opnsense.md  overseerr.md  palmr.md  paperless-ngx.md  papra.md  pi.md  plex.md  prowlarr.md  qbittorrent.md  radarr.md  rybbit.md  scrutiny.md  seerr.md  sonarr.md  tailscale.md  umami.md  unifi.md  zfs-zed.md
init/: adguard.bash  adguard.sh  macbook.bash  pi.bash  pve.bash  pve.sh  sid.bash  sid.sh
lib/: helpers.py  helpers.ts  hl_helpers.py  hl_prompts.py  prompts.py  prompts.ts
main/: aang.sh  ez.sh  gfe.sh  toph.sh  wsl.fish  wsl.sh  zuko.sh
nodes/: adguard.py  ez.sh  macbook.py  macbook.ts  module.py  pi.py  pi.sh  pve.py  sid.py  test.py  toph.sh  wsl.py  zuko.sh
old/: init.bash
plugins/: brew-casks.ts  brew-formula.ts  certs.ts  fnm.ts  forklift-default.ts  hostname.ts  install-fish.ts  install-homebrew.ts  install-rye.ts  keka-helper.ts  link-files.ts  mac-apps.ts  macos-dock.ts  sdkman.ts  sops-config.ts  ssh.ts
scripts/: bun-shell.ts  delete-refs.ts  fonttools.py  incus-edit.ts  zigdl.ts
shared/: _modules.py  age.py  bun.py  common.py  docker.py  fish_install.py  fish_setup.py  node.py  pdm.py  rye.py  sdkman.py  sops.py  ssh.py  sshd.py  sudoers.py
utils/: helpers.fish  helpers.py  modules.py  paths.ts  prompts.fish  prompts.py  prompts.sh  prompts.ts  set_perms.fish  set_perms.sh  utils.ts
wip/: backrest-lxc.md  bun-infra.ts  caddy-lxc.md  delete-refs.ts  docker-lxc.md  immich-lxc.md  kan.md  plex-lxc.md  qbittorrent.md  sonarr.md  tailscale-lxc.md  truenas.md  unifi-lxc.md
(+349 files in other folders)
