[project]
name = "homelab"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "shellrunner>=0.4.1",
]

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.2.1",
]

[tool.rye.scripts]
"lint:pyright" = "pyright ."
"lint:ruff" = "ruff check ."
lint = { chain = ["lint:pyright", "lint:ruff"] }
format = "ruff format ."

[tool.pyright]
typeCheckingMode = "strict"
extraPaths = ["lib"]

[tool.ruff]
line-length = 120
output-format = "grouped"
respect-gitignore = false

[tool.ruff.lint]
select = ["ALL"]
ignore = [
"D100",
"D101",
"D103",
"ANN101",
"T201",
"INP001",
# ruff conflicts
"D203",
"D213",
# ruff format conflicts
"COM812",
"ISC001",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["*.py"]

[tool.hatch.metadata]
allow-direct-references = true
