[project]
name = "homelab"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "shellrunner>=0.4.2",
]

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.9",
]

[tool.rye.scripts]
"lint:pyright" = "pyright ."
"lint:ruff" = "ruff check ."
lint = { chain = ["lint:pyright", "lint:ruff"] }
format = "ruff format ."

[tool.pyright]
typeCheckingMode = "strict"
extraPaths = ["lib"]

[tool.ruff]
line-length = 120
output-format = "grouped"
respect-gitignore = false

[tool.ruff.lint]
select = ["ALL"]
ignore = [
"D100", # undocumented-public-module: Missing docstring in public module
"D101", # undocumented-public-class: Missing docstring in public class
"D103", # undocumented-public-method: Missing docstring in public method
"INP001", # implicit-namespace-package: File {filename} is part of an implicit namespace package. Add an __init__.py.
"ANN101", # missing-type-self: Missing type annotation for {name} in method
"T201", # print: print found
# ruff conflicts
"D203", # one-blank-line-before-class: 1 blank line required before class docstring
"D213", # multi-line-summary-second-line: Multi-line docstring summary should start at the second line
# ruff format conflicts
"COM812", # missing-trailing-comma: Trailing comma missing
"ISC001", # single-line-implicit-string-concatenation: Implicitly concatenated string literals on one line
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["*.py"]

[tool.hatch.metadata]
allow-direct-references = true
